--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -28,7 +28,7 @@
 //## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-@body-bg:               #fff;
+@body-bg:               transparent;
 //** Global text color on `<body>`.
 @text-color:            #000;
 
