--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -19,3 +19,4 @@
 @import "layouts/_pages";            // Page styling
 @import "layouts/pages/_home";       // Home page styling
 @import "layouts/_posts";            // Post styling
+@import "layouts/_camps";            // Camps styling
